# slotmachine

./: .env.example  .gitignore  .mcp.json  CLAUDE.md  README.md  docker-compose.yml  pyproject.toml
.claude-plugin/: marketplace.json  plugin.json
.claude/commands/: config.md  developer.md  inbox.md  infra.md  pm.md  save.md
commands/: inbox.md  init.md  link.md  recall.md  relink.md  status.md  sync.md
docs/infra/: architecture.md  runbook.md
docs/planning/decisions/: ADR-001-f2-git-sync-strategy.md  ADR-002-inbox-excluded-from-graphdb.md  ADR-003-embedding-error-fallback.md
docs/prd/: SlotMachine_PRD.md
docs/tasks/: backlog.md  sprint-1.md  sprint-2.md  sprint-4.md  sprint-5.md  sprint-6.md  sprint-current.md
scripts/: auto_sync.py  bootstrap-mcp.sh  prewarm.sh
slotmachine/: config.py  server.py
slotmachine/classifier/: para.py  splitter.py
slotmachine/linker/: linker.py
slotmachine/rag/: retriever.py
slotmachine/sync/: embedding.py  full_sync.py  git_manager.py  graphdb.py  incremental_sync.py  para_utils.py  parser.py  pipelines.py  sync_history.py
tests/: test_classifier.py  test_config.py  test_embedding.py  test_full_sync.py  test_git_manager.py  test_graphdb.py  test_incremental_sync.py  test_integration_f4_f5.py  test_integration_phase1.py  test_integration_phase2.py  test_linker.py  test_para_utils.py  test_parser.py  test_retriever.py  test_splitter.py  test_sync_history.py
